Fix anchor type 34BB

--- a/dos33.html
+++ b/dos33.html
@@ -8222,7 +8222,7 @@ I've annotated <a class="mem">*wastes*</a> locations in the listing where memory
             <tr><td>T2S2</td><td>$33ED .. $33ED</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    2</td><td>VTOC <a class="d" href="#_#3ED">Track Allocation</a>  </td></tr>
             <tr><td>T2S2</td><td>$33F3 .. $ </td></tr>
             <tr><td>T2S2</td><td>$3497 .. $34BA</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    8</td><td>VTOC <a class="d" href="#_3497">tracks 41+</a> sector bitmaps</td></tr>
-            <tr><td>T2S2</td><td>$34BB .. $34BB</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>CAT Unused <a class="_34BB">sector type 2</a> = CATALOG</a></td></tr>
+            <tr><td>T2S2</td><td>$34BB .. $34BB</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>CAT Unused <a class="d" href="#_34BB">sector type 2</a> = CATALOG</a></td></tr>
             <tr class="macro"><td>Total</td><td>n/a           </td><td>n/a                                       </td><td align="right">  160</td><td> </td></tr>
         </table>
     </font>
