Fix broken link for sector type 4 in mem wasted

--- a/dos33.html
+++ b/dos33.html
@@ -8213,16 +8213,16 @@ I've annotated <a class="mem">*wastes*</a> locations in the listing where memory
 <br>&nbsp; &nbsp; &nbsp; BNE DR2C</tr></td>
             <tr><td>T0SB</td><td>$81..$FF</td><td><a class="file" href="#RELOCTR">RELOCTR</a></td><td align="right">  127</td><td><a class="d" href="#"           >     </a></td></tr>
             <tr><td>T0SC</td><td>$1D78 .. $1D  </td><td><a class="file" href="#DOSINIT">DOSINIT</a></td><td align="right">   10</td><td><a class="d" href="#_1D78">AS2VT </a></td></tr>
-            <tr><td>T2S2</td><td>$33BB .. $33BB</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>Unused <a class="_33BB">sector type 4</a> = VTOC</a></td></tr>
-            <tr><td>T2S2</td><td>$33A0 .. $33A3</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    4</td><td>32 sectors/track allocation bitmap mask <a class="d" href="#_33A0">ALC10S</a></td></tr>
-            <tr><td>T2S2</td><td>$33BF .. $33BF</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>VTOC <a class="d" href="#_33BF">spare</a> shenanigans </td></tr>
-            <tr><td>T2S2</td><td>$33C0 .. $33C0</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>VTOC <a class="d" href="#_33C0">spare</a> shenanigans </td></tr>
-            <tr><td>T2S2</td><td>$33C2 .. $33E1</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">   32</td><td>VTOC <a class="d" href="#_33C2">spare</a> shenanigans </td></tr>
-            <tr><td>T2S2</td><td>$33E3 .. $33EA</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    8</td><td>VTOC <a class="d" href="#_33E3">spare</a> shenanigans </td></tr>
-            <tr><td>T2S2</td><td>$33ED .. $33ED</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    2</td><td>VTOC <a class="d" href="#_#3ED">Track Allocation</a>  </td></tr>
+            <tr><td>T2S2</td><td>$33BB .. $33BB</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>Unused <a class="v" href="#_33BB">sector type 4</a> = VTOC</a></td></tr>
+            <tr><td>T2S2</td><td>$33A0 .. $33A3</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    4</td><td>32 sectors/track allocation bitmap mask <a class="v" href="#_33A0">ALC10S</a></td></tr>
+            <tr><td>T2S2</td><td>$33BF .. $33BF</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>VTOC <a class="v" href="#_33BF">spare</a> shenanigans </td></tr>
+            <tr><td>T2S2</td><td>$33C0 .. $33C0</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>VTOC <a class="v" href="#_33C0">spare</a> shenanigans </td></tr>
+            <tr><td>T2S2</td><td>$33C2 .. $33E1</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">   32</td><td>VTOC <a class="v" href="#_33C2">spare</a> shenanigans </td></tr>
+            <tr><td>T2S2</td><td>$33E3 .. $33EA</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    8</td><td>VTOC <a class="v" href="#_33E3">spare</a> shenanigans </td></tr>
+            <tr><td>T2S2</td><td>$33ED .. $33ED</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    2</td><td>VTOC <a class="v" href="#_#3ED">Track Allocation</a>  </td></tr>
             <tr><td>T2S2</td><td>$33F3 .. $ </td></tr>
-            <tr><td>T2S2</td><td>$3497 .. $34BA</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    8</td><td>VTOC <a class="d" href="#_3497">tracks 41+</a> sector bitmaps</td></tr>
-            <tr><td>T2S2</td><td>$34BB .. $34BB</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>CAT Unused <a class="d" href="#_34BB">sector type 2</a> = CATALOG</a></td></tr>
+            <tr><td>T2S2</td><td>$3497 .. $34BA</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    8</td><td>VTOC <a class="v" href="#_3497">tracks 41+</a> sector bitmaps</td></tr>
+            <tr><td>T2S2</td><td>$34BB .. $34BB</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>CAT Unused <a class="v" href="#_34BB">sector type 2</a> = CATALOG</a></td></tr>
             <tr class="macro"><td>Total</td><td>n/a           </td><td>n/a                                       </td><td align="right">  160</td><td> </td></tr>
         </table>
     </font>
